--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,6 +7,7 @@
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
 @import "components/user-component.css";
+@import "components/badge.css";
 
 /* Screens */
 @import "screens/login.css";
@@ -15,4 +16,9 @@
 body{
     color: #2e363e ;
     font-family: 'Noto Sans KR', sans-serif;
+}
+
+.main_screen
+{
+    padding: 0px var(--horizontal-space);
 }
