--- a/CSS/components/alt-screen-header.css
+++ b/CSS/components/alt-screen-header.css
@@ -6,6 +6,10 @@
     justify-content: center;
 }
 
+.at{
+    padding-top: 50px;
+}
+
 .alt-header__title{
     font-size: 28px;
     font-weight: 600;
