--- a/CSS/components/alt-screen-header.css
+++ b/CSS/components/alt-screen-header.css
@@ -6,6 +6,10 @@
     justify-content: center;
 }
 
+.alt-header__column{
+    width: 33%;
+}
+
 .at{
     padding-top: 50px;
 }
@@ -19,6 +23,16 @@
     margin-right: auto;
 }
 
+.alt-header__column:nth-child(2){
+    text-align: center;
+}
+
 .alt-header__column:last-child{
     margin-left: auto;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.alt-header__column span:last-child{
+    margin-left: 20px;
 }
