--- a/CSS/screens/chat.css
+++ b/CSS/screens/chat.css
@@ -35,4 +35,42 @@
     border-radius: 25px;
     text-align: center;
     font-size: 14px;
+    margin-bottom: 25px;
+}
+
+.message-row{
+    width: 100%;
+    display: flex;
+}
+
+.message-row img{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 15px;
+}
+
+.message__author{
+    margin-bottom: 5px;
+    display: block;
+}
+
+.message__info{
+    display: flex;
+    align-items: flex-end;
+
+}
+
+.message__bubble {
+    background-color: white;
+    padding: 13px;
+    font-size: 18px;
+    border-radius: 0px 16px 16px 16px;
+    margin-right: 5px;
+}
+
+.message__time,
+.message__author {
+    font-size: 13px;
+    opacity: 0.8;
 }
