--- a/CSS/screens/chat.css
+++ b/CSS/screens/chat.css
@@ -41,6 +41,7 @@
 .message-row{
     width: 100%;
     display: flex;
+    margin-bottom: 25px;
 }
 
 .message-row img{
@@ -73,4 +74,20 @@
 .message__author {
     font-size: 13px;
     opacity: 0.8;
+}
+
+.message-row--own{
+    justify-content: flex-end;
+}
+
+.message-row--own .message__bubble{
+    background-color: var(--yellow);
+    border-top-right-radius: 0;
+    border-top-left-radius: 15px;
+    margin-right: 0;
+    margin-left: 5px;
+}
+
+.message-row--own .message__info{
+    flex-direction: row-reverse;
 }
