--- a/CSS/screens/chat.css
+++ b/CSS/screens/chat.css
@@ -1,6 +1,6 @@
 #chat-screen{
     background-color: #abc1d2;
-    height: 1100vh;
+    height: 500vh;
 }
 
 #chat-screen .alt-header,
@@ -21,11 +21,23 @@
     z-index: 1;
 }
 
+@keyframes fadeIn {
+    from{
+        transform: translateY(30px);
+        opacity: 0;
+    }
+    to{
+        transform: none;
+        opacity: 1;
+    }
+}
+
 .main-chat{
-    margin-top: 150px;
+    margin-top: 180px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    animation: fadeIn 0.5s linear;
 }
 
 .chat__timestamp{
@@ -90,4 +102,33 @@
 
 .message-row--own .message__info{
     flex-direction: row-reverse;
+}
+
+.reply{
+    transition: all .3s ease-in-out;
+}
+
+.reply input{
+    transition: all .3s ease-in-out;
+}
+
+.reply .reply__colum:first-child,
+.reply .fa-face-flushed,
+.reply button{
+    transition: opacity .3s ease-in-out;
+}
+
+.reply:focus-within .reply__colum:first-child,
+.reply:focus-within .fa-face-flushed,
+.reply:focus-within button{
+    opacity: 0;
+}
+
+.reply:focus-within input{
+    width: 95vw;
+    transform: translateX(-12%) translateY(-80px);
+}
+
+.reply:focus-within{
+   transform: translateY(80px);
 }
